--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "test": "exit 0"
   },
   "author": "Todd Dukart <tdukart@mechninja.com>",
