--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "prepare": "npm run build",
-    "test": "exit 0"
+    "test": "jest"
   },
   "author": "Todd Dukart <tdukart@mechninja.com>",
   "license": "BSD-3-Clause",
@@ -15,7 +15,12 @@
     "lodash.zipobject": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1",
     "@types/lodash.zipobject": "^4.1.6",
+    "babel-jest": "^26.0.1",
+    "jest": "^26.0.1",
     "rollup": "^1.32.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
